--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ EXPO_PUBLIC_FIREBASE_PROJECT_ID=your-project-id
 EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET=your-project.appspot.com
 EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your-sender-id
 EXPO_PUBLIC_FIREBASE_APP_ID=your-app-id
+
+# Development
+# Set to "true" to skip auth during development
+EXPO_PUBLIC_DEV_SKIP_AUTH=false
