--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo-constants": "~18.0.12",
     "expo-linking": "~8.0.11",
     "expo-router": "~6.0.21",
+    "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "firebase": "^12.7.0",
     "nativewind": "^4.2.1",
