--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "convert-workouts": "node scripts/convert-workouts.js",
+    "prebuild": "npm run convert-workouts && expo prebuild"
   },
   "dependencies": {
     "@expo-google-fonts/chakra-petch": "^0.4.1",
@@ -15,13 +17,13 @@
     "@react-native-async-storage/async-storage": "2.2.0",
     "expo": "~54.0.30",
     "expo-audio": "^1.1.1",
-    "expo-av": "~16.0.8",
     "expo-constants": "~18.0.12",
     "expo-font": "~14.0.10",
     "expo-linking": "~8.0.11",
     "expo-router": "~6.0.21",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
+    "expo-video": "~3.0.15",
     "firebase": "^12.7.0",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
