--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "convert-workouts": "node scripts/convert-workouts.js",
+    "sync-workouts": "bash scripts/sync-workouts.sh",
     "prebuild": "npm run convert-workouts && expo prebuild"
   },
   "dependencies": {
