--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "web": "expo start --web",
     "convert-workouts": "node scripts/convert-workouts.js",
     "sync-workouts": "bash scripts/sync-workouts.sh",
-    "prebuild": "npm run convert-workouts && expo prebuild"
+    "prebuild": "npm run convert-workouts && expo prebuild",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json}\""
   },
   "dependencies": {
     "@expo-google-fonts/chakra-petch": "^0.4.1",
-    "@expo-google-fonts/jetbrains-mono": "^0.4.1",
     "@expo-google-fonts/space-grotesk": "^0.4.1",
     "@react-native-async-storage/async-storage": "2.2.0",
     "expo": "~54.0.30",
     "expo-audio": "^1.1.1",
     "expo-constants": "~18.0.12",
+    "expo-dev-client": "~6.0.20",
     "expo-font": "~14.0.10",
     "expo-linking": "~8.0.11",
     "expo-router": "~6.0.21",
@@ -42,6 +45,9 @@
     "@types/react": "~19.1.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-preset-expo": "^54.0.9",
+    "eslint": "^9.39.2",
+    "eslint-config-expo": "~9.0.0",
+    "prettier": "^3.7.4",
     "tailwindcss": "^3.3.2",
     "typescript": "~5.9.2"
   },
